--- a/public/about.html
+++ b/public/about.html
@@ -7,25 +7,26 @@
 </head>
 <body>
     <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>I'm a vibrant individual whose creativity knows no bounds, with a penchant for music, dance, poetry, and 
+   art. Hailing from the historic town of Devakottai in Sivagangai district, Tamil Nadu, and currently 
+   residing in the bustling city of Coimbatore, my life is infused with a rich tapestry of culture and 
+   experiences. Alongside my artistic pursuits, I share my home with a beloved canine companion, 
+   embodying both warmth and companionship.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+   <p>My eclectic tastes span across various forms of 
+   entertainment, from the melodies of diverse music genres to the captivating narratives of feel-good and 
+   romantic films, and the rich tapestry of Tamil history found within the pages of books. An extroverted 
+   spirit, I thrive in social settings, relishing the opportunity to connect with others and explore new 
+   adventures. </p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+   <p>While I cherish moments spent outdoors, engaging in activities that invigorate both body 
+   and soul, my aspirations extend to professional endeavors, with a focus on excelling in a reputable 
+   company. Yet, amidst the hustle and bustle of life, my heart yearns for the exploration of historical 
+   landmarks, fueling my wanderlust and desire for cultural enrichment.</p>
+   
+   <p>my journey, I embody a
+   harmonious blend of creativity, curiosity, and ambition, continually seeking to paint the canvas of my life 
+   with vibrant hues of experience and discovery.</p>
 </body>
 <hr/>
 </html>
