--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <ul>
         <li><p>Won III prize in Technical Paper Presentation on the topic of Swarm Intelligence - Sri Eshwar College of Engineering . (2023)</p></li>
         <li><p>Introduction to Data Analytics - IBM Completed through Coursera . (2023)</p></li>
-        <li<p>Machine Learning For All - University Of London . (2023)</p></li>
+        <li></li><p>Machine Learning For All - University Of London . (2023)</p></li>
         <li><p>Introduction to Operating systems - IIT Madras Completed through NPTEL . (2022)</p></li>
     </ul>
     <hr/>
